--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="sidebar">
         <h1>Peterson Florindo</h1>
         <img src="sua_foto.jpg" alt="Sua Foto">
-        <p>Olá, este é meu portfólio de projetos. Aqui, compartilho como aplico análise de dados, estatística e machine learning na resolução de problemas de negócios.</p>
+        <p>Meu trabalho com dados, em um só lugar. Neste portfólio, mostro como aplico análise de dados, estatística e machine learning para resolver desafios de negócios.</p>
         <div class="links">
             <a href="#">LinkedIn</a> |
             <a href="#">Portfólio</a> |
