--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
         <div class="section">
             <h2>Portfólio</h2>
             <h3>Sobre mim</h3>
-            <p>Profissional com experiência em análise de dados e habilidades em desenvolvimento de modelos preditivos, estatística, versionamento de código e dashboards para visualização de dados e tomada de decisão.</p>
-            <p>Minha experiência em análise de dados na Saúde Pública durante a graduação, deu origem à minha trajetória na área. Durante esse período, percebi como a análise de dados pode impactar significativamente a melhoria de processos e potencializar a geração de resultados positivos.</p>
-            <p>Atualmente, estou cursando a formação Cientista de Dados pela Data Science Academy e concluí a formação em Data Science do programa Santander Coders, uma parceria entre a Ada Tech e a Santander Open Academy.</p>
-            <p>Meu objetivo é apoiar empresas na tomada de decisões estratégicas, oferecendo soluções baseadas em dados para impulsionar o crescimento e a inovação.</p>
+            <p>Profissional com experiência em análise de dados, automação de processos e inteligência de negócios, com habilidades em Python, VBA, RPA, SQL e Power BI.</p>
+            <p>Minha experiência com dados foi se consolidando ao longo de diferentes desafios. Em Growth, utilizei análise de dados para criar relatórios estratégicos. Na tecnologia para logística, refinei a prospecção de leads com insights baseados em dados. Já na engenharia, desenvolvi automações em Python para otimizar a geração de relatórios e aumentar a eficiência operacional. Essas experiências fortaleceram meu foco no impacto dos dados nos negócios e impulsionaram minha especialização na área.</p>
+            <p>Atualmente, curso o MBA em Data Science e Analytics pela USP/Esalq, aprofundando meus conhecimentos em machine learning, big data e inteligência artificial.</p>
+            <p>Busco transformar dados em soluções estratégicas, apoiando empresas na tomada de decisões mais eficientes e orientadas por dados.</p>
+
             <h3>Habilidades Técnicas</h3>
             <ul>
                 <li><strong>Linguagens:</strong> Python, R e SQL</li>
