--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
             <h3>Habilidades Técnicas</h3>
             <ul>
-                <li><strong>Linguagens:</strong> Python, R e SQL</li>
-                <li><strong>Ferramentas:</strong> Docker, Excel, Git e Power BI.</li>
+                <li><strong>Linguagens:</strong> Python, SQL, VBA e DAX</li>
+                <li><strong>Ferramentas:</strong> Power BI, Tableau e Excel.</li>
             </ul>
         </div>
         <div class="section">
