--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
         <div class="section">
             <h2>Portfólio</h2>
             <h3>Sobre mim</h3>
-            <p>Profissional com experiência em análise de dados, automação de processos e inteligência de negócios, com habilidades em Python, VBA, RPA, SQL e Power BI.</p>
-            <p>Minha experiência com dados foi se consolidando ao longo de diferentes desafios. Em Growth, utilizei análise de dados para criar relatórios estratégicos. Na tecnologia para logística, refinei a prospecção de leads com insights baseados em dados. Já na engenharia, desenvolvi automações em Python para otimizar a geração de relatórios e aumentar a eficiência operacional. Essas experiências fortaleceram meu foco no impacto dos dados nos negócios e impulsionaram minha especialização na área.</p>
-            <p>Atualmente, curso o MBA em Data Science e Analytics pela USP/Esalq, aprofundando meus conhecimentos em machine learning, big data e inteligência artificial.</p>
-            <p>Busco transformar dados em soluções estratégicas, apoiando empresas na tomada de decisões mais eficientes e orientadas por dados.</p>
-
+            <p>Profissional em análise de dados, automação de processos e inteligência de negócios, com domínio de Python, SQL, Power BI, VBA e RPA para otimizar operações e apoiar decisões estratégicas.</p>
+            <p>No Growth, dei meus primeiros passos com relatórios estratégicos, aprimorando minha capacidade analítica. Em análise de dados para vendas, aprendi a transformar dados em decisões mais inteligentes, aplicando métricas de conversão e segmentação para refinar a prospecção de leads e otimizar processos. Na engenharia, elevei minha expertise ao desenvolver automações que reduziram o tempo de geração de relatórios e ampliaram a eficiência operacional. Cada etapa fortaleceu minha capacidade de extrair valor dos dados, utilizando automação, otimização de processos e inteligência comercial para apoiar decisões estratégicas e aprimorar operações.</p>
+            <p>Cursando MBA em Data Science (USP/Esalq), aprimoro minha capacidade analítica com machine learning, big data e inteligência artificial, expandindo minha atuação para soluções preditivas e inteligência de mercado. Busco transformar dados em estratégias que impulsionem eficiência e inovação nas empresas.</p>
             <h3>Habilidades Técnicas</h3>
             <ul>
                 <li><strong>Linguagens:</strong> Python, SQL, VBA e DAX</li>
