--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
             <div class="project">
                 <h3>Pipeline de Dados: ETL com Airflow, Python e Visualizações no Power BI</h3>
-                <img src="pipeline_etl.png" alt="Pipeline ETL">
+                <img src="eda_cfm.png" alt="eda_cfm">
                 <p><strong>Contexto:</strong> Este projeto teve como foco a construção de um pipeline de dados para análise de vendas de uma loja online fictícia, utilizando a FakeStoreAPI. Ele abrange todas as etapas de um processo ETL (Extração, Transformação e Carregamento), além do desenvolvimento de dashboards no Power BI para visualização dos dados.</p>
                 
                 <p><strong>Objetivos:</strong></p>
