--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         .project img {
             display: block;
             margin: 0 auto;
-            max-width: 100%;
+            width: 50%;
             height: auto;
             border-radius: 8px;
         }
