--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1); /* Melhor efeito de separação */
         }
 
+        .sidebar p {
+            text-align: center;  /* Centraliza apenas os parágrafos */
+        }
+
         /* Ajuste na imagem do perfil */
         .sidebar img {
             border-radius: 50%;
