--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
         .sidebar p {
             text-align: center;  /* Centraliza apenas os parágrafos */
+            font-size: 14px;  /* Reduz o tamanho do texto da descrição */
+            line-height: 1.5;
         }
 
         /* Ajuste na imagem do perfil */
@@ -54,6 +56,7 @@
             text-decoration: none;
             color: #0073e6;
             font-weight: bold;
+            font-size: 14px;
         }
 
         /* Conteúdo principal */
