--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
             height: auto;
             border-radius: 8px;
         }
+        .separator {
+                border: none;
+                border-top: 1px solid #e0e0e0; /* Cinza bem clarinho */
+                width: 60%;  /* Define um tamanho proporcional */
+                margin: 15px auto;  /* Centraliza e dá espaçamento */
+            }
         }
     </style>
 </head>
@@ -134,6 +140,7 @@
         <h1>Peterson Florindo</h1>
         <img src="sua_foto.jpg" alt="Sua Foto">
         <p>Meu trabalho com dados, em um só lugar 🧑‍💻</p>
+        <hr class="separator">
         <p>Neste portfólio, mostro como aplico análise de dados, estatística e machine learning para resolver desafios de negócios.</p>
         <div class="links">
             <a href="#">LinkedIn</a> |
