--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h2>Projetos de Análise de Dados</h2>
             
             <div class="project">
-                <h3>Pipeline de Dados: ETL com Airflow, Python e Visualizações no Power BI</h3>
+                <h3>Análise Exploratória de Dados: Convenient Food Mart</h3>
                 <img src="eda_cfm.png" alt="eda_cfm">
                 <p><strong>Contexto:</strong> Este projeto teve como foco a construção de um pipeline de dados para análise de vendas de uma loja online fictícia, utilizando a FakeStoreAPI. Ele abrange todas as etapas de um processo ETL (Extração, Transformação e Carregamento), além do desenvolvimento de dashboards no Power BI para visualização dos dados.</p>
 
