--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         <hr class="separator">
         <p>Neste portfólio, mostro como aplico análise de dados, estatística e machine learning para resolver desafios de negócios.</p>
         <div class="links">
-            <a href="#">LinkedIn</a> |
-            <a href="#">Portfólio</a> |
-            <a href="#">GitHub</a> |
-            <a href="#">E-mail</a>
+            <a href="https://www.linkedin.com/in/petersonflorindo/">LinkedIn</a> |
+            <a href="https://petersonflorindo.github.io/">Portfólio</a> |
+            <a href="https://github.com/PetersonFlorindo">GitHub</a> |
+            <a href="peterson.florindo@outlook.com">E-mail</a>
         </div>
     </div>
 
