--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
         <div class="section">
             <h2>Portfólio</h2>
             <h3>Sobre mim</h3>
-            <p>Profissional em análise de dados, automação de processos e inteligência de negócios, com domínio de Python, SQL, Power BI, VBA e RPA para otimizar operações e apoiar decisões estratégicas.</p>
-            <p>No Growth, dei meus primeiros passos com relatórios estratégicos, aprimorando minha capacidade analítica. Em análise de dados para vendas, aprendi a transformar dados em decisões mais inteligentes, aplicando métricas de conversão e segmentação para refinar a prospecção de leads e otimizar processos.</p>
-            <p>Na engenharia, implementei automações que reduziram o tempo de geração de relatórios e tornaram os processos mais ágeis e eficientes. Essas experiências aprimoraram minha capacidade de estruturar, automatizar e analisar dados para otimizar processos, gerar insights estratégicos e apoiar a tomada de decisões orientadas por dados.</p>
-            <p>Cursando MBA em Data Science (USP/Esalq), aprimoro minha capacidade analítica com machine learning, big data e inteligência artificial, expandindo minha atuação para soluções preditivas e inteligência de mercado. Busco transformar dados em estratégias que impulsionem eficiência e inovação nas empresas.</p>
+            <p>Engenheiro com experiência em inteligência de negócios, automação de processos e análise de dados. Especialista em Python, SQL, Power BI e RPA, aplicando essas ferramentas para estruturar dados, criar relatórios estratégicos e apoiar decisões.</p>
+            <p>No Growth, analisei mercado e concorrência para embasar decisões estratégicas, resultando em um novo modelo de negócio, no lançamento da primeira unidade física em quatro semanas e na captação de US$ 8 milhões. Desenvolvi análises para vendas, aprimorando conversão e segmentação. Na engenharia, implementei automações que reduziram o tempo de geração de relatórios em 40%, melhorando a eficiência operacional.</p>
+            <p>Atualmente, curso um MBA em Data Science (USP/Esalq), aprofundando conhecimentos em machine learning, big data e inteligência artificial. Meu objetivo é transformar dados em insights estratégicos e soluções preditivas, impulsionando a inovação e a eficiência nas empresas.
+
+</p>
 
             <h3>Habilidades Técnicas</h3>
             <ul>
